--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -59,3 +59,19 @@ footer {
   padding-left: 5px;
   font-size: 1.5rem !important;
 }
+
+.modal-body {
+  background: rgb(33, 33, 52) !important;
+  border-color: black !important;
+}
+
+.modal-header {
+  background: rgb(33, 33, 52) !important;
+  color: rgb(255, 255, 255);
+  border-color: black !important;
+}
+
+a {
+  color: #9def6c !important;
+  text-decoration: underline;
+}
