fixed response time and status issue

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -71,7 +71,7 @@ footer {
   border-color: black !important;
 }
 
-a {
+monitor > a {
   color: #9def6c !important;
   text-decoration: underline;
 }
